# netpop

./: .travis.yml  CMakeLists.txt  Makefile  README.md  makefile  tmux-start.bash
include/: net4.h
src/: net2.r  net3.c++  net3.h  net4-homog.c++  net4.c++  net4.h  network.c++  network.h  randnet_dendritic.c++  randnet_dendritic.h  randnet_lattice.c++  randnet_lattice.h  utils.c++  utils.h  utils_dendlatt.c++  utils_dendlatt.h
test/: net4.cpp  net4.r  numeric-integration.r
